k8s/qbittorrent/resources/deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deployment
  labels: &labels
    app.kubernetes.io/component: web
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels: *labels
  template:
    metadata:
      labels: *labels
    spec:
      hostname: qbittorrent
      serviceAccountName: service-account
      volumes:
        - name: volume
          persistentVolumeClaim:
            claimName: volume
        - name: truenas-media
          persistentVolumeClaim:
            claimName: truenas-media
        - name: dev-net-tun
          hostPath:
            path: /dev/net/tun
      securityContext:
        fsGroup: 1000
      containers:
        - name: qbittorrent
          image: ghcr.io/onedr0p/qbittorrent:5.0.3@sha256:025f32d260a3e924885405c0ca01ab8e396360330438ef8562ffd973d2dbb927
          resources:
            requests:
              memory: 100M
            limits:
              memory: 1G
          securityContext:
            privileged: false
            allowPrivilegeEscalation: false
            runAsNonRoot: true
            runAsUser: 1000
            runAsGroup: 1000
            readOnlyRootFilesystem: true
            capabilities:
              drop: [ALL]
          volumeMounts:
            - name: volume
              mountPath: /config
              subPath: qbittorrent
            - name: truenas-media
              mountPath: /media
          ports:
            - name: http
              containerPort: 80
          livenessProbe: &probe
            httpGet:
              path: /api/v2/app/version
              port: 80
            initialDelaySeconds: 30
            periodSeconds: 30
            timeoutSeconds: 10
            failureThreshold: 6
          readinessProbe: *probe
          startupProbe:
            httpGet:
              path: /api/v2/app/version
              port: 80
            failureThreshold: 30
            periodSeconds: 10
        - name: tailscale
          imagePullPolicy: Always
          image: ghcr.io/tailscale/tailscale:v1.78.3@sha256:9d4c17a8451e2d1282c22aee1f08d28dc106979c39c7b5a35ec6313d4682a43e
          volumeMounts:
            - name: dev-net-tun
              mountPath: /dev/net/tun
          securityContext:
            privileged: true
            capabilities:
              add:
                - NET_ADMIN
                - SYS_MODULE
