k8s/qbittorrent/resources/internal-ingress.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  annotations:
    cert-manager.io/cluster-issuer: cloudflare-issuer

    gethomepage.dev/href: 'https://qbittorrent.durbin.casa'
    gethomepage.dev/enabled: 'true'
    gethomepage.dev/app: qbittorrent
    gethomepage.dev/group: Servarr
    gethomepage.dev/icon: qbittorrent
    gethomepage.dev/name: Qbittorrent
    gethomepage.dev/widget.type: qbittorrent
    gethomepage.dev/widget.url: http://qbittorrent-service
    nginx.ingress.kubernetes.io/auth-method: GET
    nginx.ingress.kubernetes.io/auth-url: http://authelia-service.default.svc.cluster.local/api/authz/auth-request
    nginx.ingress.kubernetes.io/auth-signin: https://auth.durbin.casa?rm=$request_method
    nginx.ingress.kubernetes.io/auth-response-headers: Remote-User,Remote-Name,Remote-Groups,Remote-Email

spec:
  ingressClassName: internal
  rules:
    - host: &host qbittorrent.durbin.casa
      http:
        paths:
          - pathType: Prefix
            path: '/'
            backend:
              service:
                name: service
                port:
                  name: http
  tls:
    - secretName: durbin-casa-wildcard-cert
      hosts:
        - *host
